--- a/scripts/baseline.ipynb
+++ b/scripts/baseline.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,53 +14,58 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget https://github.com/skoltech-nlp/detox/releases/download/emnlp2021/filtered_paranmt.zip\n",
-        "!unzip filtered_paranmt.zip"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "aYNcs6ZqqBlC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!wget https://github.com/skoltech-nlp/detox/releases/download/emnlp2021/filtered_paranmt.zip\n",
+        "!unzip filtered_paranmt.zip"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "yFFaS6O_qFep"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import pandas as pd"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7mOrygSGqI4J"
+      },
+      "outputs": [],
       "source": [
         "df = pd.read_csv('filtered.tsv', sep='\\t', encoding='utf-8')\n",
         "print(df.shape)\n",
         "df.sample(10)"
-      ],
-      "metadata": {
-        "id": "7mOrygSGqI4J"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "(df.ref_tox > df.trn_tox).mean()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "8Q-njONKqPSy"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "(df.ref_tox > df.trn_tox).mean()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "W0xHL9J0qPQd"
+      },
+      "outputs": [],
       "source": [
         "xx = []\n",
         "yy = []\n",
@@ -87,15 +78,15 @@
         "        xx.append(row.translation)\n",
         "        \n",
         "xydf = pd.DataFrame({'source': xx, 'target': yy})"
-      ],
-      "metadata": {
-        "id": "W0xHL9J0qPQd"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9XwR3EkSqPOH"
+      },
+      "outputs": [],
       "source": [
         "from transformers import (\n",
         "    AdamW,\n",
@@ -103,60 +94,60 @@
         "    T5Tokenizer, T5TokenizerFast,\n",
         "    get_linear_schedule_with_warmup\n",
         ")"
-      ],
-      "metadata": {
-        "id": "9XwR3EkSqPOH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "t5Para = \"ceshine/t5-paraphrase-paws-msrp-opinosis\""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ebaKdra3qPLR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "t5Para = \"ceshine/t5-paraphrase-paws-msrp-opinosis\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "tokenizer = T5TokenizerFast.from_pretrained(model_name)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "eB2ZFr3bqOc5"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "tokenizer = T5TokenizerFast.from_pretrained(model_name)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "DffCZWa9qKIF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from sklearn.model_selection import train_test_split"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_train, df_test = train_test_split(xydf, test_size=300)\n",
-        "print(df_train.shape[0], df_test.shape[0])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "EX1mELrVqY66"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df_train, df_test = train_test_split(xydf, test_size=300)\n",
+        "print(df_train.shape[0], df_test.shape[0])"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GFozq4umqZyX"
+      },
+      "outputs": [],
       "source": [
         "%%time\n",
         "\n",
@@ -164,15 +155,15 @@
         "y1 = tokenizer(df_train.target.tolist(), truncation=True)\n",
         "x2 = tokenizer(df_test.source.tolist(), truncation=True)\n",
         "y2 = tokenizer(df_test.target.tolist(), truncation=True)"
-      ],
-      "metadata": {
-        "id": "GFozq4umqZyX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Im-3Cc69qcN9"
+      },
+      "outputs": [],
       "source": [
         "class PairsDataset(torch.utils.data.Dataset):\n",
         "    def __init__(self, x, y):\n",
@@ -196,38 +187,38 @@
         "train_dataset = PairsDataset(x1, y1)\n",
         "test_dataset = PairsDataset(x2, y2)\n",
         "len(train_dataset), len(test_dataset)"
-      ],
-      "metadata": {
-        "id": "Im-3Cc69qcN9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from torch.utils.data import Dataset, DataLoader"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "GZHaK2DBqdyE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from torch.utils.data import Dataset, DataLoader"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_dataloader = DataLoader(train_dataset, batch_size=4, drop_last=True, shuffle=True, num_workers=1)\n",
-        "test_dataloader = DataLoader(test_dataset, batch_size=4, drop_last=True, shuffle=True, num_workers=1)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "rAei2eO9qekW"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "train_dataloader = DataLoader(train_dataset, batch_size=4, drop_last=True, shuffle=True, num_workers=1)\n",
+        "test_dataloader = DataLoader(test_dataset, batch_size=4, drop_last=True, shuffle=True, num_workers=1)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "c7KzTogvqgFS"
+      },
+      "outputs": [],
       "source": [
         "from transformers import (\n",
         "    AdamW,\n",
@@ -236,49 +227,49 @@
         "    get_linear_schedule_with_warmup\n",
         ")\n",
         "import torch"
-      ],
-      "metadata": {
-        "id": "c7KzTogvqgFS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "checkpoint_name = 'SkolkovoInstitute/t5-paraphrase-paws-msrp-opinosis-paranmt'"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "S-ckh9CeqhEq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "checkpoint_name = 'SkolkovoInstitute/t5-paraphrase-paws-msrp-opinosis-paranmt'"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model = T5ForConditionalGeneration.from_pretrained(checkpoint_name)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "1Sb8tHoDqjD4"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model = T5ForConditionalGeneration.from_pretrained(checkpoint_name)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "device = torch.device('cuda:0')\n",
-        "model.to(device)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "MB08mDTJqkxH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "device = torch.device('cuda:0')\n",
+        "model.to(device)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Ph4wGDmTqmzH"
+      },
+      "outputs": [],
       "source": [
         "import transformers\n",
         "from transformers import Trainer, TrainingArguments\n",
@@ -289,15 +280,15 @@
         "    @cached_property\n",
         "    def _setup_devices(self):\n",
         "        return device"
-      ],
-      "metadata": {
-        "id": "Ph4wGDmTqmzH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "N4Sb4PohqnSI"
+      },
+      "outputs": [],
       "source": [
         "from typing import List, Dict, Union\n",
         "\n",
@@ -318,15 +309,15 @@
         "        batch['decoder_attention_mask'] = ybatch['attention_mask']\n",
         "        \n",
         "        return {k: torch.tensor(v) for k, v in batch.items()}"
-      ],
-      "metadata": {
-        "id": "N4Sb4PohqnSI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y46A0WEaqpy-"
+      },
+      "outputs": [],
       "source": [
         "save_name = 'models/t5-cechine-nmt-mined-detox'\n",
         "training_args = TrAr(\n",
@@ -346,15 +337,15 @@
         "    save_total_limit=1,\n",
         "    save_steps=5000,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "Y46A0WEaqpy-"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OF4prEGzqqnv"
+      },
+      "outputs": [],
       "source": [
         "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)\n",
         "trainer = Trainer(\n",
@@ -365,83 +356,99 @@
         "    data_collator=data_collator,\n",
         "    tokenizer=tokenizer,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "OF4prEGzqqnv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "y1E_7FoXqsqW"
+      },
+      "outputs": [],
       "source": [
         "import gc\n",
         "gc.collect()\n",
         "torch.cuda.empty_cache();"
-      ],
-      "metadata": {
-        "id": "y1E_7FoXqsqW"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "trainer.train()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "n_YH78JsquC1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "trainer.train()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "trainer.evaluate()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "NaBWrtJXqwHU"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "trainer.evaluate()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.eval();"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-7wyZYmIqytS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model.eval();"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.save_pretrained(t5Para)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Bf1GBKphqy_e"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model.save_pretrained(t5Para)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "d_fO11-1rbXH"
+      },
+      "outputs": [],
       "source": [
         "inputs = tokenizer('hey loser , try this get a fucking life and stay out of mine , which you know nothing about', return_tensors='pt')\n",
         "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
         "for t in model.generate(**inputs, num_return_sequences=10, do_sample=False, num_beams=10):\n",
         "    print(tokenizer.decode(t, skip_special_tokens=True))"
-      ],
-      "metadata": {
-        "id": "d_fO11-1rbXH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.8 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.8"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
